updated timer (webservice) in view matches

--- a/app/views/viewMatches.scala.html
+++ b/app/views/viewMatches.scala.html
@@ -14,7 +14,12 @@
 		<h2>View Matches:</h2>
 		<p>Every 3 days, you will be able to see 10 new matches. Select 3
 			people to have a short video chat with to know them better. Start
-			making new friends now!</p>
+			making new friends now! The clock is ticking....</p>
+			<br>
+			<p align=center>
+			<iframe src="http://free.timeanddate.com/countdown/i3caohl5/n25/cf12/cm0/cu4/ct0/cs0/ca0/co0/cr0/ss0/cac000/cpc000/pct/tcfff/fn3/fs200/szw320/szh135/iso2012-10-25T00:00:00" frameborder="0" width="200" height="56"></iframe>
+
+			</p>
 	</div>
 </div>
 
