Added hometown to users

--- a/app/views/myProfile.scala.html
+++ b/app/views/myProfile.scala.html
@@ -34,6 +34,11 @@
 						<td>Age</td>
 						<td>@user.age</td>
 					</tr>
+					
+					<tr id="Hometown" class="info">
+						<td>Hometown</td>
+						<td>@user.hometown</td>
+					</tr>
 
 					<tr id="Location" class="info">
 						<td>Location</td>
