--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -40,17 +40,23 @@
   	</div>
 </div>
   
-<div class="clearfix"> 
-	<input id="remember_me" name="remember_me" value="1" type="checkbox">  
-    <span>Remember Me</span>   
+<div class="control-group">
+<div class="controls">
+<label class="checkbox">
+<input type="checkbox"> Remember me
+</label>
+<br>
+<div class="actions"><input class="btn primary" name="commit" value="Log in" type="submit"></div> 
+</div>
+</div>
 <fieldset>	
-
-  <div class="actions"><input class="btn primary" name="commit" value="Log in" type="submit"></div>  
+ 
 	
-</fieldset></div> <!--end container-->
+</fieldset> <!--end container-->
 
 
 </fieldset></form>
+<br>
 
 }
 
