changed vote page

--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -32,8 +32,8 @@
 					<div class="span2">
 						<a href="@user.image"><img height=200
 							src= "@user.image"
-							 /></a> <br> @user.name
-							 <br> @user.location, @user.age
+							 /></a> 
+							 <br> @user.hometown <br>Age: @user.age
 						<div class="btn-toolbar">
 							<div class="btn-group">
 								<button type="button" class="btn btn-mini" data-toggle="button">
