--- a/app/views/info/about.scala.html
+++ b/app/views/info/about.scala.html
@@ -1,11 +1,32 @@
-@(message: String)
-
 @main("About") {
 
 <div class="page-header">
-    <h1>About <small>executive summary of our product</small></h1>
+    <h1>About <small>Why Honest Meet?</small></h1>
 </div>
 
-<p>@message</p>
-
+<h3>Problems with current online dating</h3>
+<ul>
+<li>Lots of dishonesty! According to OK Cupid people frequently lie about the following
+	<ul>
+	<li>height</li>
+	<li>income</li>
+	<li>sexual orientation</li>
+	<li>their appearence</li>
+	<li> the could not even be human...</li>
+	</ul>
+</li>
+<li>It can possibly be dangerous</li>
+<li>It is hard to meet compatible people
+<blockquote>
+the heavy emphasis on profile browsing at most dating sites has considerable downsides, and there is little reason to believe that current compatibility algorithms are especially(actually) effective -- Online Dating: A Critical Analysis From the Perspective of Psychological Science
+</blockquote>
+</li>
+</ul>
+<h3> But we at Honest Meet believe something better is possible!! </h3>
+<p> We invite you too explore the key features that distinguish Honest Meet from the other online dating sites.</p>
+<ul>
+<li><a href="#">Flavour of the month</a></li>
+<li><a href="#">10 profiles in 3 days</a></li>
+<li><a href="#">Ansynchronious Speed Dating</a></li>
+</ul>
 }
