Updated main page

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,10 +5,9 @@
 
 <div class="hero-unit">
 	<h1>Meet <em>The One</em> at Honest Meet</h1>
-	<p>Honest meet helps people to make new friends online.
-		Although social media has developed tremendously, they mostly focus on
-		maintaining existing friendships, keeping in touch. Eventually friends
-		allows you to meet new people online and widen your social circle.</p>
+	<p>Honest Meet is a different kind of online dating site. We try to keep things
+	honest, fun and safe. We invite you to join our community and make new friends or possibly meet
+	somebody special that might change your life.</p>
 
 	<center>
 		<img id=theme-pic
@@ -42,8 +41,8 @@
 	</div>
 
 	<div class="span4">
-		<h2>3 minute video Chat</h2>
-		<p>The video chat allows people to see each other in real time.</p>
+		<h2>Async speed dating</h2>
+		<p>Our asynchronious speed dating will help you get a better feel of your matches.</p>
 		<p>
 			<a class="btn" href="#">Details &raquo;</a>
 		</p>
