Updated page titles

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -39,7 +39,7 @@ body {
               <li><a href="@routes.Matches.getMatches()">View Matches</a></li>
               <li><a href="@routes.Matches.requests()">Requests</a></li>
               <li><a href="@routes.Matches.vote()">Vote</a></li>
-              <li><a href="@routes.Matches.viewVideos()">Chat</a></li>
+              <li><a href="@routes.Matches.viewVideos()">Async</a></li>
               <li><a href="@routes.Application.signup()">Sign up</a></li>
               <li><a href="@routes.Application.login()">Login</a></li>
             </ul>
