--- a/app/views/viewMatches.scala.html
+++ b/app/views/viewMatches.scala.html
@@ -1,4 +1,4 @@
-@(users: List[User]) @loggedmain("Flavour of the Month") {
+@(users: List[User]) @loggedmain("Matches") {
 <style type="text/css">
 #matches {
 	margin: auto;
