Added tech info in about

--- a/app/views/info/about.scala.html
+++ b/app/views/info/about.scala.html
@@ -29,4 +29,10 @@ the heavy emphasis on profile browsing at most dating sites has considerable dow
 <li><a href="#">10 profiles in 3 days</a></li>
 <li><a href="#">Ansynchronious Speed Dating</a></li>
 </ul>
+<h3>What powers Honest Meet?</h3>
+<ul>
+<li><a href="http://www.playframework.org/">Play! Framework</a></li>
+<li><a href="http://twitter.github.com/bootstrap/"> Twitter Bootstrap</a></li>
+<li><a href="https://www.heroku.com/">Heroku</a></li>
+</ul>
 }
