--- a/app/views/requests.scala.html
+++ b/app/views/requests.scala.html
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
 	<div class="hero-unit">
-		<h2>Accept/Reject Requests</h2>
+		<h2>Send Challenges</h2>
 		<p>The following people have sent you a request. You can choose to
 			accept the request and send a video reply or ignore their request.</p>
 	</div>
@@ -10,7 +10,6 @@
 
 <div class="row">
 	<div class="span8 offset2">
-
 		@for(user <- users){
 		<div class="row">
 			<center>
@@ -38,6 +37,7 @@
 			</center>
 		</div>
 		<br> <br> }
+		
 
 	</div>
 </div>
