Finishing up requests

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -37,7 +37,7 @@ body {
             <ul class="nav">
               <li><a href="@routes.Matches.myProfile()">Profile</a></li>
               <li><a href="@routes.Matches.getMatches()">View Matches</a></li>
-              <li><a href="@routes.Matches.requests()">Requests</a></li>
+              <li><a href="@routes.Matches.requests()">Challenge</a></li>
               <li><a href="@routes.Matches.vote()">Vote</a></li>
               <li><a href="@routes.Matches.viewVideos()">Async</a></li>
               <li><a href="@routes.Application.signup()">Sign up</a></li>
