--- a/app/views/norequests.scala.html
+++ b/app/views/norequests.scala.html
@@ -3,14 +3,8 @@
 <div class="container-fluid">
 	<div class="hero-unit">
 		<h2>Send Challenges</h2>
-		<p>The following people have sent you a request. You can choose to
-			accept the request and send a video reply or ignore their request.</p>
-	</div>
-</div>
-
-<div class="row">
-	<div class="span8 offset2">
-	No requests available.
+		<p>No people to be challenged available right now. Pretty sure you will
+		have one soon!</p>
 	</div>
 </div>
 }
