--- a/app/views/sendRequest.scala.html
+++ b/app/views/sendRequest.scala.html
@@ -19,7 +19,7 @@
 			<label>Send a request</label>
 			<textarea rows="10" class="span8 offset1"></textarea>
 			<span class="help-block">Do not ask too many questions, he/she
-				only has 3 minutes!</span>
+				only has only 3 minutes!</span>
 			<button type="submit" class="btn">Send</button>
 		</form>
 	</div>
