Put loggedmain on track twith main

--- a/app/views/loggedmain.scala.html
+++ b/app/views/loggedmain.scala.html
@@ -39,7 +39,7 @@ body {
               <li><a href="@routes.Matches.getMatches()">View Matches</a></li>
               <li><a href="@routes.Matches.requests()">Challenge</a></li>
               <li><a href="@routes.Matches.vote()">Vote</a></li>
-              <li><a href="@routes.Matches.viewVideos()">Chat</a></li>
+              <li><a href="@routes.Matches.viewVideos()">Async</a></li>
               <li><a href="@routes.Application.logout()">Logout</a></li>
             </ul>
           </div><!--/.nav-collapse -->
