--- a/app/views/emptyviewVideos.scala.html
+++ b/app/views/emptyviewVideos.scala.html
@@ -1,4 +1,4 @@
-@(videos: List[String], user: User) @loggedmain("Async videos") {
+@(videos: List[String]) @loggedmain("Async videos") {
 
 <div class="container-fluid">
 	<div class="hero-unit">
@@ -20,16 +20,9 @@
 			<h2> Who's challenged you? </h2>
 			<div class="row-fluid">
 			<div class="span8">
-				<h3>Upload a video to send to @user.name</h3>
-				<p>If you would like to send a video in reply to @user.name 's
-					questions, click on their pircture, select the video to upload, then click
-					upload to send your video.</p>
+				<p>No challenges just yet.</p>
 			</div>
-			<div class="span3 offset1">
-			<a href="@routes.Matches.uploadVideo(user.email)">
-				<img src=@user.image width="150" />
-		    </a>
-			</div>
+		
 		</div>
 		</div>
 
