Added more info pages for presentation

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -27,7 +27,7 @@
 		<p>The monthly theme adds an element of fun and keeps users
 			active.</p>
 		<p>
-			<a class="btn" href="#">Details &raquo;</a>
+			<a class="btn" href="@routes.InfoPages.flavour()"">Details &raquo;</a>
 		</p>
 	</div>
 
@@ -36,7 +36,7 @@
 		<p>Instead of spending hours looking through profiles, give it a
 			try and talk to someone!</p>
 		<p>
-			<a class="btn" href="#">Details &raquo;</a>
+			<a class="btn" href="@routes.InfoPages.profiles()"">Details &raquo;</a>
 		</p>
 	</div>
 
@@ -44,7 +44,7 @@
 		<h2>Async speed dating</h2>
 		<p>Our asynchronious speed dating will help you get a better feel of your matches.</p>
 		<p>
-			<a class="btn" href="#">Details &raquo;</a>
+			<a class="btn" href="@routes.InfoPages.async()"">Details &raquo;</a>
 		</p>
 	</div>
 </div>
