--- a/app/views/info/flavour.scala.html
+++ b/app/views/info/flavour.scala.html
@@ -1,4 +1,4 @@
-@main("About") {
+@main("Flavour of the Month") {
 
 <div class="page-header">
     <h1>About <small>Why Honest Meet?</small></h1>
@@ -25,9 +25,9 @@ the heavy emphasis on profile browsing at most dating sites has considerable dow
 <h3> But we at Honest Meet believe something better is possible!! </h3>
 <p> We invite you too explore the key features that distinguish Honest Meet from the other online dating sites.</p>
 <ul>
-<li><a href="@routes.InfoPages.flavour()">Flavour of the month</a></li>
-<li><a href="@routes.InfoPages.profiles()">10 profiles in 3 days</a></li>
-<li><a href="@routes.InfoPages.async()">Ansynchronious Speed Dating</a></li>
+<li><a href="#">Flavour of the month</a></li>
+<li><a href="#">10 profiles in 3 days</a></li>
+<li><a href="#">Ansynchronious Speed Dating</a></li>
 </ul>
 <h3>What powers Honest Meet?</h3>
 <ul>
