Updated vote page

--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
 <div class="hero-unit">
-	<h2>Vote for other users</h2>
+	<h2>Vote for other users for this flavour of the month</h2>
 	<p>
 		Look at other users' profile pictures and vote for those that stand
 		out from the rest. Choose from: Fashionista
