Updated view matches

--- a/app/views/viewMatches.scala.html
+++ b/app/views/viewMatches.scala.html
@@ -11,9 +11,9 @@
 
 <div class="container-fluid">
 	<div class="hero-unit">
-		<h2>View Matches:</h2>
+		<h2>View Matches</h2>
 		<p>Every 3 days, you will be able to see 10 new matches. Select 3
-			people to have a short video chat with to know them better. Start
+			people to challenge you to an Async date. Start
 			making new friends now! The clock is ticking....</p>
 			<br>
 			<p align=center>
