--- a/app/views/requests.scala.html
+++ b/app/views/requests.scala.html
@@ -26,7 +26,7 @@
 						</a>
 						
 							<a href="@routes.Matches.sendRequest(user.email)">
-						<button id="button" type="submit" class="btn btn-mini btn-success pull-right">Send Challenge</button>
+						<button id="button" type="submit" class="btn btn-mini btn-success">Send Challenge</button>
 					</center>
 				</div>
 
