--- a/app/views/sendRequest.scala.html
+++ b/app/views/sendRequest.scala.html
@@ -22,8 +22,7 @@
 		<br>
 		@helper.form(action = routes.Matches.question(user.email)) {
 		<form>
-			<legend>Legend</legend>
-			   @inputText(qForm("Send a request")) 
+			   @inputText(qForm("Send a request"), 'placeholder -> "Type your request here")
 			<span class="help-block">Do not ask too many questions, he/she
 				only has only 3 minutes!</span>
 			<button type="submit" class="btn">Send</button>
