Fixed async bug. Fixed bug whre login would appear in menu bar even while logged in.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -32,12 +32,12 @@ body {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">Honest Meet</a>
+          <a class="brand" href="@routes.Application.index()">Honest Meet</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="@routes.Matches.myProfile()">Profile</a></li>
               <li><a href="@routes.Matches.getMatches()">View Matches</a></li>
-              <li><a href="@routes.Matches.requests()">Challenge</a></li>
+              <li><a href="@routes.Matches.requests()">Challenges</a></li>
               <li><a href="@routes.Matches.vote()">Vote</a></li>
               <li><a href="@routes.Matches.viewVideos()">Async</a></li>
               <li><a href="@routes.Application.signup()">Sign up</a></li>
