Added tm to async, fixed bug

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -41,7 +41,7 @@
 	</div>
 
 	<div class="span4">
-		<h2>Async™ speed dating</h2>
+		<h2>Async™ speed date</h2>
 		<p>Our asynchronious speed dating will help you get a better feel of your matches.</p>
 		<p>
 			<a class="btn" href="@routes.InfoPages.async()"">Details &raquo;</a>
