--- a/app/views/info/flavour.scala.html
+++ b/app/views/info/flavour.scala.html
@@ -1,38 +1,10 @@
 @main("Flavour of the Month") {
 
 <div class="page-header">
-    <h1>About <small>Why Honest Meet?</small></h1>
+    <h1>Flavour of the Month <small>Keeping things exciting and fresh</small></h1>
 </div>
 
-<h3>Problems with current online dating</h3>
-<ul>
-<li>Lots of dishonesty! According to OK Cupid people frequently lie about the following
-	<ul>
-	<li>height</li>
-	<li>income</li>
-	<li>sexual orientation</li>
-	<li>their appearence</li>
-	<li> the could not even be human...</li>
-	</ul>
-</li>
-<li>It can possibly be dangerous</li>
-<li>It is hard to meet compatible people
-<blockquote>
-the heavy emphasis on profile browsing at most dating sites has considerable downsides, and there is little reason to believe that current compatibility algorithms are especially(actually) effective -- Online Dating: A Critical Analysis From the Perspective of Psychological Science
-</blockquote>
-</li>
-</ul>
-<h3> But we at Honest Meet believe something better is possible!! </h3>
-<p> We invite you too explore the key features that distinguish Honest Meet from the other online dating sites.</p>
-<ul>
-<li><a href="#">Flavour of the month</a></li>
-<li><a href="#">10 profiles in 3 days</a></li>
-<li><a href="#">Ansynchronious Speed Dating</a></li>
-</ul>
-<h3>What powers Honest Meet?</h3>
-<ul>
-<li><a href="http://www.playframework.org/">Play! Framework</a></li>
-<li><a href="http://twitter.github.com/bootstrap/"> Twitter Bootstrap</a></li>
-<li><a href="https://www.heroku.com/">Heroku</a></li>
-</ul>
+<h3>Increasing honesty with assessment signals</h3>
+<p>By establishing a community tradition of expressing creativity through their
+Flavor of the Month pictures users can get assessment signal thay they can trust.</p>
 }
